# warpir

./: .gitignore  .gitmodules  flow.py  layouts.py  ops.py  pyproject.toml
kernel_examples/: gemm_baseline.cu  gemm_pipelined.cu  gemm_warp_specialized.cu
kernel_examples/attention/: mha_h100_simple_fwd.cu
outputs/: gemm_baseline.cu  gemm_pipelined.cu  gemm_warp_specialized.cu
tests/: Makefile  __init__.py  attention_baseline.py  attention_gen.py  common.mk  gemm_autopipeline.py  gemm_baseline.py  gemm_baseline_v2.py  gemm_gen.py  gemm_harness.py  gemm_hl.py  gemm_hl_old.py  gemm_pipelined.py  gemm_warp_specialized.py  gen_gemm_pipelined.py  generate.py  graph_hl.py  test.sh  test_gemm_baseline.py  test_harness.py  test_modal_attention.py  test_modal_gpu.py
tests/solutions/: gemm_pipelined.cu
twill/: __init__.py  scheduler.py
v2_tests/: gemm_baseline_v2.py  test_gemm_baseline.py
v2_tests/solutions/: gemm_baseline.cu
warpir/: __init__.py  compiler.py  dataflow_graph.py  flow.py  format.py  helpers.py  layouts.py  lowering.py  main.py  modulo_scheduler.py  ops.py  optimizer.py  sir.py  stmts.py
warpir-v2/: README.md  example.py
warpir-v2/lowering/: __init__.py  lowering.py
warpir-v2/warpir/: __init__.py  expr.py  ir.py  types.py
warpir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
warpir/ir/: __init__.py  ops.py  types.py
warpir/lowering/: __init__.py  lowering.py
warpir/passes/: memory_annotator.py  modulo_scheduler.py  register_counter.py  warp_assigner.py
warpir/printing/: __init__.py  printer.py
warpir_v2/: README.md
(+7 files in other folders)
