[project]
name = "warpir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "clang-format>=17.0.0",
    "pyrefly>=0.54.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["warpir"]

[tool.pyrefly]
project-includes = ["**/*.py*"]
ignore-missing-imports = ["jinja2"]

[tool.pytest.ini_options]
pythonpath = ["."]
